--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@ repartoSection.appendChild(downloadBtn);
 
 
 <nav class="fixed bottom-0 left-0 w-full bg-[#1E1E1E] flex justify-around items-center py-3 rounded-b-3xl text-white text-xs font-semibold z-50">
-<a href="javascript:window.history.back();" class="flex flex-col items-center space-y-1">
-<i class="fa fa-arrow-left"></i><span>Regresar</span>
-</a>
+  <a href="javascript:window.history.back();" class="flex flex-col items-center space-y-1">
+    <i class="fas fa-arrow-left text-xl"></i><span>Regresar</span>
+  </a>
 <a href="https://cuentaappcreator.github.io/streaming/" class="flex flex-col items-center space-y-1">
 <i class="fas fa-th-large text-xl"></i><span>Streaming</span>
 </a>
